Переработаны задачи в лекциях 2, 3

--- a/02/week_02.Rmd
+++ b/02/week_02.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Массивы. Логическая индексация"
 author: "Храмов Д. А."
-date: "11.04.2019"
+date: "19.05.2019"
 fontenc: "T2A"
 fonttheme: "professionalfonts"
 output: 
@@ -111,7 +111,7 @@ ab = a + (b-a)*rand()
 ```
 
 
-## Задача 1. 
+## Задача 1
 
 \label{t01}
 
@@ -120,13 +120,13 @@ ab = a + (b-a)*rand()
 ![](images/create_m1.png)
 
 
-## Задача 2. 
+
+
+## Задача 2
 
 \label{t02}
 
-Создать заданную матрицу `B`, воспользовавшись только числами, арифметическими действиями и функциями `zeros`, `ones`, `eye`.
-
-![](images/create_m2.png)
+Создать матрицу-столбец `B` из трех элементов -- случайных чисел, равномерно распределенных на интервале `[1,5]`.
 
 
 ## Удаление строк и столбцов массива
@@ -186,6 +186,17 @@ u =
 
     1.8889    2.0000
 ```
+
+
+## Задача 3
+
+\label{t03}
+
+Построить матрицу-строку (вектор) `v`, состоящую из чисел в интервале `[10,15]`, взятых с шагом `0.1` при помощи оператора-двоеточия. 
+
+Какова длина полученного вектора?
+
+Построить вектор `u`, состоящий из тех же элементов, что и `v`, но с помощью функции `linspace()`.
 
 
 ## Создание многомерных массивов
@@ -303,9 +314,13 @@ E = A*Ai;
 ![](images/imagesc_A.png)
 
 
+
+
 ## imagesc(Ai)
 
 ![](images/imagesc_Ai.png)
+
+
 
 
 ## imagesc(E)
@@ -313,28 +328,35 @@ E = A*Ai;
 ![](images/imagesc_E.png)
 
 
-## Задача 3.
-
-\label{t03}
-
-Из элементов матрицы A, составить матрицу B, используя только операции выделения диапазона (:) и транспонирования (') и вывести ее на экран. Сохранить текст программы в m-файле.
-
-![](images/a.png)
-![](images/b.png)
 
 
-## Задача 4.
+## Задача 4
 
 \label{t04}
 
-Пусть `x` — одномерный массив. Верно ли записано на языке MATLAB математическое выражение? Если нет, то исправить ошибку.
+Создать скрипт, выполняющий:
+
+* поиск максимального элемента матрицы `A` (задача 1) и вывод его на экран;
+* составление матрицы `B = A` из блоков матрицы `A` размера 3х3;
+* проверку равенства `B = A`;
+* транспозицию (') блока матрицы `B`, составленного из элементов первых трех строк и столбцов матрицы `A` (верхний левый блок `A`), и вывод его на экран.
+
+
+## Задача 5
+
+\label{t05}
+
+Пусть `x` — одномерный массив. Верно ли записано на языке MATLAB математическое выражение? Если нет, исправьте ошибку. Для каждой строки таблицы решение должно содержать ответ "да"/"нет" и синтаксически правильную запись выражения.
+
 
 ![](images/table.png)
 
 
-## Задача 5.
 
-\label{t05}
+
+## Задача 6
+
+\label{t06}
 
 При движении тела, брошенного под углом к горизонту, координаты тела изменяются по закону
 
@@ -425,6 +447,7 @@ P = D(D>=0);
 ![*Источник:* http://mathonweb.com/entrtain/monte/t_monte.htm](images/monte2.png)
 
 
+
 ## Алгоритм оценки площади фигуры
 
 \Large
@@ -436,7 +459,6 @@ P = D(D>=0);
 ```
 Площадь_фигуры = Площадь_прямоугольника*ns/n
 ```
-
 
 
 ## Пример. Вычисление $\pi$
@@ -502,9 +524,9 @@ ns = sum(y <= fun);
 **Но:** пишете как вам проще — чтобы это работало. Когда программа заработает правильно, будете думать об улучшениях.
 
 
-## Задача 6.
+## Задача 7
 
-\label{t06}
+\label{t07}
 
 Используя логическую индексацию, запишите функцию
 $$
@@ -533,3 +555,4 @@ x = [1 -3 0 4 3 -5 -7];
 * \hyperlink{t04}{Задача 4}
 * \hyperlink{t05}{Задача 5}
 * \hyperlink{t06}{Задача 6}
+* \hyperlink{t07}{Задача 7}
