--- a/03/week_03.Rmd
+++ b/03/week_03.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Управление вычислительным процессом. Двумерная графика"
 author: "Храмов Д. А."
-date: "14.04.2019"
+date: "19.05.2019"
 fontenc: "T2A"
 fonttheme: "professionalfonts"
 output: 
@@ -219,7 +219,7 @@ All_A =
 * ...
 
 
-## Задача 1.
+## Задача 1
 
 \label{t01}
 
@@ -338,33 +338,6 @@ disp([s,i])
 ```
 
 
-## Задача 2.
-
-\label{t02}
-
-Какие значения выведет на экран следующая программа?
-
-```
-n = 1;
-a = 1;
-while a < 100
-    n = n + 1;
-    a = a * n
-end
-```
-
-
-## Задача 3.
-
-\label{t03}
-
-\Large
-
-Начальный вклад клиента в банк составляет 100000 грн., процент годового дохода — 12%. К основной сумме процент не добавляется.
-
-Определите, через сколько лет сумма на счете клиента вдвое превысит начальный вклад.
-
-
 ## Цикл со счетчиком: for
 
 Переменной цикла присваиваются значения из заданного набора.
@@ -445,9 +418,20 @@ end
 ```
 
 
-## Задача 4.
+## Задача 2
 
-\label{t04}
+\label{t02}
+
+\Large
+
+Начальный вклад клиента в банк составляет 100000 грн. Процент годового дохода: 12%. К основной сумме процент не добавляется (простой процент). Определите, через сколько лет сумма на счете клиента вдвое превысит начальный вклад.
+
+Пусть теперь процент ежегодно добавляется к основной сумме (сложный процент). Через сколько лет сумма на счете клиента вдвое превысит начальный вклад в таком случае?
+
+
+## Задача 3
+
+\label{t03}
 
 Вычислить сумму
 
@@ -494,28 +478,9 @@ end
 ```
 
 
-## Задача 5.
+## Задача 4
 
-\label{t05}
-
-Векторизовать (записать без использования циклов) следующий код:
-
-```
-dx = 1/(n-1);
-x = 0:dx:1;
-f = zeros(1,n);
-
-for i = 2:n
-    f(i) = f(i-1)+dx*x(i-1);
-end
-```
-
-n — произвольное натуральное число.
-
-
-## Задача 6.
-
-\label{t06}
+\label{t04}
 \Large
 
 Составьте программу для вычисления суммы ряда: 
@@ -654,9 +619,9 @@ grid on
 ![](images/plot_holdon.png)
 
 
-## Задача 7.
+## Задача 5
 
-\label{t07}
+\label{t05}
 
 Постройте графики функций
 $$
@@ -697,9 +662,9 @@ subplot(2,2,4)
 ```
 
 
-## Задача 8.
+## Задача 6
 
-\label{t08}
+\label{t06}
 
 Постройте графики функций
 $$
@@ -830,9 +795,9 @@ title(['a = ' num2str(a)])
 ![](images/title.png)
 
 
-## Задача 9. 
+## Задача 7 
 
-\label{t09}
+\label{t07}
 
 Построить график кусочно-непрерывной функции
 $$
@@ -931,6 +896,20 @@ semilogy(t,e2(t)) % прямая y = 2*t
 ![](images/heart.png)
 
 
+## Задача 8
+
+\label{t08}
+
+Постройте график-"сердечко", аналогичный приведенному выше. Координаты `x` и `y` задаются следующим образом:
+
+```
+x = (1-sin(t)).*cos(t).^3;
+y = (1/3)*(1-sin(t)).*sin(t)-(1/3)*sin(t).^2;
+```
+
+Параметр `t` имеет смысл угла. Построение плоской фигуры с заполнением цветом осуществляется функцией `fill`.
+
+
 ## Список задач
 
 \Large
@@ -943,4 +922,3 @@ semilogy(t,e2(t)) % прямая y = 2*t
 * \hyperlink{t06}{Задача 6}
 * \hyperlink{t07}{Задача 7}
 * \hyperlink{t08}{Задача 8}
-* \hyperlink{t08}{Задача 9}
